--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>kittenscraft.com</title>
     <meta name="og:title" content="kittenscraft.com">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <meta name="description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you!">
     <meta name="keywords" content="kittens, craft, Minecraft, server, smp">
 </head>
