--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>kittenscraft.com</title>
-    <meta name="og:title" content="kittenscraft.com">
-    <meta name="og:description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you!">
     <meta name="theme-color" content="#FFC0CB">
     <link rel="icon" type="image/x-icon" href="favicon.png">
-    <meta name="description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you!">
     <meta name="keywords" content="kittens, craft, Minecraft, server, smp">
+    <title>Kitten's Craft</title>
+    <meta name="title" content="Kitten's Craft">
+    <meta name="description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you! ">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kittenscraft.com/">
+    <meta property="og:title" content="Kitten's Craft">
+    <meta property="og:description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you! ">
+    <meta property="og:image" content="">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://kittenscraft.com/">
+    <meta property="twitter:title" content="Kitten's Craft">
+    <meta property="twitter:description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you! ">
+    <meta property="twitter:image" content="">
 </head>
 <body bgcolor=”#000000">
     <div class="bgimg">
