--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <meta property="og:url" content="https://kittenscraft.com/">
     <meta property="og:title" content="Kitten's Craft">
     <meta property="og:description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you! ">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="cat.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://kittenscraft.com/">
     <meta property="twitter:title" content="Kitten's Craft">
     <meta property="twitter:description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you! ">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="cat.png">
 </head>
 <body bgcolor=”#000000">
     <div class="bgimg">
