--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div class="bottomleft">
         <p>Diverting from kittens-smp.xyz to a more new and better Minecraft server!</p>
         </div>
+                               
+                               
+        <embed name="GoodEnough" src="background.mp3" loop="true" hidden="true" autostart="true">
     </div>
 </body>
 <style>
