--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
         </div>
         <div class="bottomleft">
         <p>Diverting from kittens-smp.xyz to a more new and better Minecraft server!</p>
-        </div>
-                               
-                               
-        <embed name="GoodEnough" src="background.mp3" loop="true" hidden="true" autostart="true">
+        </div>         
+        <embed src="background.mp3" loop="true" autostart="true" width="2" height="0">
     </div>
 </body>
 <style>
