--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <meta name="keywords" content="kittens, craft, Minecraft, server, smp">
     <title>Kitten's Craft</title>
     <meta name="title" content="Kitten's Craft">
-    <meta name="description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you! ">
-
+    <meta name="description" content="Kitten's Craft - Coming Soon! Rebranding from kittens-smp.xyz to a new and improved Minecraft Network!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kittenscraft.com/">
     <meta property="og:title" content="Kitten's Craft">
-    <meta property="og:description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you! ">
-    <meta property="og:image" content="https://kittenscraft.com/cat.png">
-
+    <meta property="og:description" content="Kitten's Craft - Coming Soon! Rebranding from kittens-smp.xyz to a new and improved Minecraft Network!">
+    <meta data-react-helmet="true" property="og:image" content="https://kittenscraft.com/cat.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://kittenscraft.com/">
     <meta property="twitter:title" content="Kitten's Craft">
-    <meta property="twitter:description" content="kittenscraft.com is a all new Minecraft server releasing soon, diversion from kittens-smp.xyz to bring a better Minecraft experience to you! ">
+    <meta property="twitter:description" content="Kitten's Craft - Coming Soon! Rebranding from kittens-smp.xyz to a new and improved Minecraft Network!">
     <meta property="twitter:image" content="https://kittenscraft.com/cat.png">
 </head>
 <body bgcolor=”#000000">
