--- a/404.html
+++ b/404.html
@@ -6,16 +6,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Muli:400" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
-
-	<!-- Font Awesome Icon -->
 	<link type="text/css" rel="stylesheet" href="404/css/font-awesome.min.css" />
-
-	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="404/css/style.css" />
 </head>
 
@@ -32,6 +25,6 @@
 		</div>
 	</div>
 
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</body>
 
 </html>
