--- a/404.html
+++ b/404.html
@@ -2,14 +2,25 @@
 <html lang="en">
 
 <head>
-	<title>Not Found - kittenscraft.com</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Muli:400" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="404/css/font-awesome.min.css" />
-	<link type="text/css" rel="stylesheet" href="404/css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#FFC0CB">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <meta name="keywords" content="kittens, craft, Minecraft, server, smp">
+    <title>404 - Kitten's Craft</title>
+    <meta name="title" content="Kitten's Craft">
+    <meta name="description" content="Kitten's Craft - Coming Soon! Rebranding from kittens-smp.xyz to a new and improved Minecraft Network!">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kittenscraft.com/">
+    <meta property="og:title" content="Kitten's Craft">
+    <meta property="og:description" content="Kitten's Craft - Coming Soon! Rebranding from kittens-smp.xyz to a new and improved Minecraft Network!">
+    <meta data-react-helmet="true" property="og:image" content="https://kittenscraft.com/cat.png">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://kittenscraft.com/">
+    <meta property="twitter:title" content="Kitten's Craft">
+    <meta property="twitter:description" content="Kitten's Craft - Coming Soon! Rebranding from kittens-smp.xyz to a new and improved Minecraft Network!">
+    <meta property="twitter:image" content="https://kittenscraft.com/cat.png">
+	
 </head>
 
 <body>
