--- a/404.html
+++ b/404.html
@@ -20,7 +20,10 @@
     <meta property="twitter:title" content="Kitten's Craft">
     <meta property="twitter:description" content="Kitten's Craft - Coming Soon! Rebranding from kittens-smp.xyz to a new and improved Minecraft Network!">
     <meta property="twitter:image" content="https://kittenscraft.com/cat.png">
-	
+    <link href="https://fonts.googleapis.com/css?family=Muli:400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="404/css/font-awesome.min.css" />
+	<link type="text/css" rel="stylesheet" href="404/css/style.css" />
 </head>
 
 <body>
