--- a/404.html
+++ b/404.html
@@ -22,8 +22,8 @@
     <meta property="twitter:image" content="https://kittenscraft.com/cat.png">
     <link href="https://fonts.googleapis.com/css?family=Muli:400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="404/css/font-awesome.min.css" />
-	<link type="text/css" rel="stylesheet" href="404/css/style.css" />
+	<link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css" />
+	<link type="text/css" rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
