--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-	<link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css" />
-	<link type="text/css" rel="stylesheet" href="../css/style.css" />
+	<link href="https://fonts.googleapis.com/css?family=Muli:400" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#FFC0CB">
