--- a/404.html
+++ b/404.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Muli:400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#FFC0CB">
+	<title>404 - Kitten's Craft</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#FFC0CB">
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <meta name="keywords" content="kittens, craft, Minecraft, server, smp">
-    <title>404 - Kitten's Craft</title>
     <meta name="title" content="Kitten's Craft">
     <meta name="description" content="Kitten's Craft - Coming Soon! Rebranding from kittens-smp.xyz to a new and improved Minecraft Network!">
     <meta property="og:type" content="website">
@@ -22,8 +21,16 @@
     <meta property="twitter:title" content="Kitten's Craft">
     <meta property="twitter:description" content="Kitten's Craft - Coming Soon! Rebranding from kittens-smp.xyz to a new and improved Minecraft Network!">
     <meta property="twitter:image" content="https://kittenscraft.com/cat.png">
-    <link href="https://fonts.googleapis.com/css?family=Muli:400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Muli:400" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+
+	<!-- Font Awesome Icon -->
+	<link type="text/css" rel="stylesheet" href="404/css/font-awesome.min.css" />
+
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="404/css/style.css" />
 </head>
 
 <body>
@@ -39,6 +46,6 @@
 		</div>
 	</div>
 
-</body>
+</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
 </html>
