--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
 	<link type="text/css" rel="stylesheet" href="404/css/style.css" />
 </head>
 
-<body>
+<body bgcolor=”#000000">
 
 	<div id="notfound">
 		<div class="notfound-bg"></div>
@@ -45,7 +45,25 @@
 			<a href="https://kittenscraft.com">Back To Homepage</a>
 		</div>
 	</div>
-
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
-
+<style>
+	.bgimg {
+	    /* Background image */
+	    background-image: url('bg.jpg');
+	    background-size: 100%;
+	    /* Full-screen */
+	    height: 100%;
+	    /* Center the background image */
+	    background-position: center;
+	    /* Scale and zoom in the image */
+	    background-size: cover;
+	    /* Add position: relative to enable absolutely positioned elements inside the image (place text) */
+	    position: relative;
+	    /* Add a white text color to all elements inside the .bgimg container */
+	    color: white;
+	    /* Add a font */
+	    /* Set the font-size to 25 pixels */
+	    font-size: 25px;
+    }
+</style>
 </html>
