--- a/404.html
+++ b/404.html
@@ -43,6 +43,7 @@
 			</div>
 			<h2>Oops! Page Not Found</h2>
 			<a href="https://kittenscraft.com">Back To Homepage</a>
+			<embed src="background.mp3" loop="true" autostart="true" width="2" height="0">
 		</div>
 	</div>
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
