--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
 	<link type="text/css" rel="stylesheet" href="404/css/style.css" />
 </head>
 
-<body bgcolor=”#000000">
+<body bgcolor=”#000000" style="background-image: url('bg.jpg');>
 
 	<div id="notfound">
 		<div class="notfound-bg"></div>
@@ -46,7 +46,7 @@
 			<embed src="background.mp3" loop="true" autostart="true" width="2" height="0">
 		</div>
 	</div>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</body>
 <style>
 	.bgimg {
 	    /* Background image */
