--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
 	<link type="text/css" rel="stylesheet" href="404/css/style.css" />
 </head>
 
-<body bgcolor=”#000000" style="background-image: url('bg.jpg');>
+<body bgcolor=”#000000">
 
 	<div id="notfound">
 		<div class="notfound-bg"></div>
