--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Kitten's Craft"> <!--- Embed Title -->
     <meta property="og:description" content="Meet Kitten's Craft, the all new and best Minecraft server resolving around cats! Come join us today for free!"> <!--- Embed Description -->
     <meta name="theme-color" content=#FFC0CB> <!--- Embed color -->
-    <link rel="icon" href="assets/logo.ico"> 
+    <link rel="icon" href="assets/favicon.png"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -25,6 +25,7 @@
     <div class="center">
         <div class="animate__animated animate__jackInTheBox">
             <h1>Kitten's Craft</h1> <!--- Server Name -->
+            <embed src="background.mp3" loop="true" autostart="true" width="2" height="0">
             <p>Meet Kitten's Craft, the all new and best Minecraft server resolving around cats! Previously Kitten's SMP</p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
                 <a href="https://discord.gg/Bd2HEHA9xf"><button class="btn1"><i class="fab fa-discord"></i> Discord</button></a>
