--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="animate__animated animate__jackInTheBox">
             <h1>Kitten's Craft</h1> <!--- Server Name -->
             <embed src="background.mp3" loop="true" autostart="true" width="2" height="0">
-            <p>Meet Kitten's Craft, the all new and best Minecraft server resolving around cats! Previously Kitten's SMP</p> <!--- Description -->
+            <p>Meet Kitten's Craft, the all new and best Minecraft server resolving around cats! Previously Kitten's SMP play.kittenscraft.com</p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
                 <a href="https://discord.gg/Bd2HEHA9xf"><button class="btn1"><i class="fab fa-discord"></i> Discord</button></a>
                 <a href="https://kittenscraft.com/store"><button class="btn2"><i class="fas fa-coins"></i> Store</button></a>
