--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="dist/test.css"> 
     <meta property="og:site_name" content="Kitten's Craft">
     <meta property="og:title" content="Kitten's Craft"> <!--- Embed Title -->
-    <meta property="og:description" content="Meet Kitten's Craft, the all new and best Minecraft server resolving around cats! Come join us today for free!"> <!--- Embed Description -->
+    <meta property="og:description" content="Kittens Craft is the best Minecraft Network, currently featuring Survival! We are revolving around cats and welcoming new players! Come join us today!"> <!--- Embed Description -->
     <meta name="theme-color" content=#FFC0CB> <!--- Embed color -->
     <link rel="icon" href="assets/favicon.png"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +26,7 @@
         <div class="animate__animated animate__jackInTheBox">
             <h1>Kitten's Craft</h1> <!--- Server Name -->
             <embed src="background.mp3" loop="true" autostart="true" width="2" height="0">
-            <p>Meet Kitten's Craft, the all new and best Minecraft server resolving around cats! Previously Kitten's SMP play.kittenscraft.com</p> <!--- Description -->
+            <p>Kittens Craft is the best Minecraft Network, currently featuring Survival! We are revolving around cats and welcoming new players! </br>play.kittenscraft.com</p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
                 <a href="https://discord.gg/Bd2HEHA9xf"><button class="btn1"><i class="fab fa-discord"></i> Discord</button></a>
                 <a href="https://kittenscraft.com/store"><button class="btn2"><i class="fas fa-coins"></i> Store</button></a>
