--- a/index.html
+++ b/index.html
@@ -1,39 +1,344 @@
-<!DOCTYPE html>
-<html lang="en"> 
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kitten's Craft</title> <!--- Website title -->
-    <link rel="stylesheet" href="dist/style.css"> 
-    <link rel="stylesheet" href="dist/test.css"> 
-    <meta property="og:site_name" content="Kitten's Craft">
-    <meta property="og:title" content="Kitten's Craft"> <!--- Embed Title -->
-    <meta property="og:description" content="Kittens Craft is the best Minecraft Network, currently featuring Survival! We are revolving around cats and welcoming new players! Come join us today!"> <!--- Embed Description -->
-    <meta name="theme-color" content=#FFC0CB> <!--- Embed color -->
-    <link rel="icon" href="assets/favicon.png"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+  <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+  <script src="https://cdn.rawgit.com/leonardosnt/mc-player-counter/1.1.0/dist/mc-player-counter.min.js"></script>
+  <link rel="stylesheet" href="./src/css/theme.css" />
+  <link rel="stylesheet" href="./src/css/anim.css" />
+  <script src="./src/js/smoothscroll.js"></script>
+  <script src="./src/js/nav.js"></script>
+  <title>Kitten's Craft</title>
+  <meta name="theme-color" content=#FFC0CB> <!--- Embed color -->
+  <link rel="icon" href="assets/favicon.png"> 
+  <meta charset="UTF-8">
+  <meta name="description" content="Kitten's Craft is the best multiplayer Minecraft network to play and endulge in with your friends. With our amazing performance and amazing gamemodes, you will have a lot of fun! We are powered by cats!">
+  <meta property="og:description" content="Kitten's Craft is the best multiplayer Minecraft network to play and endulge in with your friends. With our amazing performance and amazing gamemodes, you will have a lot of fun! We are powered by cats!">
+  <meta name="keywords" content="Kittens, kitten, Minecraft, Server, Survival, SMP">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-    <div class="bg"></div>
-    <div class="animation-wrapper">
-        <div class="particle particle-1"></div> 
-        <div class="particle particle-2"></div>
-        <div class="particle particle-3"></div>
-        <div class="particle particle-4"></div>
-      </div>
-    <div class="center">
-        <div class="animate__animated animate__jackInTheBox">
-            <h1>Kitten's Craft</h1> <!--- Server Name -->
-            <p>Kittens Craft is the best Minecraft Network, currently featuring Survival! We are revolving around cats and welcoming new players! </br>play.kittenscraft.com</p> <!--- Description -->
-            <div class="animate__animated animate__bounceIn animate__delay-1s">
-                <a href="https://discord.gg/Bd2HEHA9xf"><button class="btn1"><i class="fab fa-discord"></i> Discord</button></a>
-                <a href="https://kittenscraft.com/store"><button class="btn2"><i class="fas fa-coins"></i> Store</button></a>
-                <a href="https://kittenscraft.com/vote"><button class="btn3"><i class="fas fa-poll"></i> Vote</button></a>
-            </div>
+
+  <!-- Nav -->
+  <div class="header" style="background: url('https://i.imgur.com/DNAZRBA.jpg'); background-attachment: fixed;">
+    <div class="navbar-fixed">
+      <nav class="z-depth-0">
+        <div class="nav-wrapper">
+          <a href="#!" class="">😺 kittenscraft.com</a>
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#about">About</a></li>
+            <li><a href="#staff">Devs</a></li>
+            <li><a href="#vip">Ranks</a></li>
+            <li><a href="https://kittenscraft.com/discord">Discord</a></li>
+            <li><a href="https://kittenscraft.com/store">Store</a></li>
+            <li><a href="https://kittenscraft.com/vote">Vote</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="#about">About</a></li>
+            <li><a href="#staff">Devs</a></li>
+            <li><a href="#vip">Ranks</a></li>
+          </ul>
         </div>
+      </nav>
+
+      <!-- / Nav -->
+
     </div>
-    <script src="app/js/script.js"></script>
-    <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
+    <div class="header-content center-align" data-aos="fade">
+      <div class="particle particle-1"></div> 
+      <div class="particle particle-2"></div>
+      <div class="particle particle-3"></div>
+      <div class="particle particle-4"></div>
+      <h1 style="padding-top: 6%;">Kitten's Craft</h1>
+      <h5>The best multiplayer Minecraft network for everyone!</h5>
+      <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" onclick="copyip()" href="#">🟢 Online   |    play.kittenscraft.com | Click to Copy</a>
+    </div>
+  </div>
+  <!-- About -->
+
+  <div class="about" id="about">
+    <div class="main">
+      <div class="row">
+        <div class="col s12 l5 align-center">
+          <img class="responsive-img" src="https://media3.giphy.com/media/VbnUQpnihPSIgIXuZv/giphy.gif" data-aos="fade-right">
+        </div>
+        <div class="col s12 l7" data-aos="fade-left">
+          <h4>What is Kitten's Craft?</h4>
+          <p>Kitten's Craft is a multiplayer server aimed at bringing the best quality and fun to everyone. We have such a kind community for you to come and explore! The best bit is that we all revolve around cats as they are what keeps our server running!</p>
+          <p>Be sure to join our Discord server for announcements and updates!</p>
+          <a class="waves-effect waves-light btn-large grey darken-4" style="margin-top: 2%;" href="#">Discord</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- / About -->
+
+  <!-- Staff -->
+
+  <div class="staff" id="staff">
+    <div class="main">
+      <div class="row">
+        <div class="col s12">
+          <h4 class="center-align" style="padding-bottom: 1%;">Developers</h5>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col m6 s12 l3" data-aos="zoom-in-up" data-aos-duration="400">
+        <div class="card-panel no-padding">
+          <div class="row">
+            <div class="col s12 no-padding">
+              <img class="responsive-img materialboxed" src="https://cdn.discordapp.com/banners/721393505746026580/a_ea849581396aba586bb398a63602b3ee.gif?size=600">
+            </div>
+          </div>
+          <div class="row main">
+            <div class="col s12 center-align">
+              <h5>Rixels1337x</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <blockquote style="margin: 0% 8% 0% 8%;">
+                I am Rixels, the owner and main developer of Kitten's Craft.
+              </blockquote>
+            </div>
+          </div>
+          <div class="row main">
+            <div class="col s12 center-align">
+              <a href="mailto:levibatkin1@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/Rixels1337x"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              <a href="https://github.com/Levi-Batkin"><i class="fa fa-github" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col m6 s12 l3" data-aos="zoom-in-up" data-aos-duration="400" data-aos-delay="150">
+        <div class="card-panel no-padding">
+          <div class="row">
+            <div class="col s12 no-padding">
+              <img class="responsive-img materialboxed" src="https://cdn.discordapp.com/banners/721393505746026580/a_ea849581396aba586bb398a63602b3ee.gif?size=600">
+            </div>
+          </div>
+          <div class="row main">
+            <div class="col s12 center-align">
+              <h5>MuffinPuncher1</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <blockquote style="margin: 0% 8% 0% 8%;">
+                I'm MufifnPuncher and are a main developer of the server.
+              </blockquote>
+            </div>
+          </div>
+          <div class="row main">
+            <div class="col s12 center-align">
+              <a href="https://github.com/LyntDev"><i class="fa fa-github" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col m6 s12 l3" data-aos="zoom-in-up" data-aos-duration="400" data-aos-delay="300">
+        <div class="card-panel no-padding">
+          <div class="row">
+            <div class="col s12 no-padding">
+              <img class="responsive-img materialboxed" src="https://cdn.discordapp.com/banners/721393505746026580/a_ea849581396aba586bb398a63602b3ee.gif?size=600">
+            </div>
+          </div>
+          <div class="row main">
+            <div class="col s12 center-align">
+              <h5>HapperKappa</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <blockquote style="margin: 0% 8% 0% 8%;">
+                I'm Kappa, Owner of Kitten's Craft managing the community.
+              </blockquote>
+            </div>
+          </div>
+          <div class="row main">
+            <div class="col s12 center-align">
+              <br>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col m6 s12 l3" data-aos="zoom-in-up" data-aos-duration="400" data-aos-delay="450">
+        <div class="card-panel no-padding">
+          <div class="row">
+            <div class="col s12 no-padding">
+              <img class="responsive-img materialboxed" src="https://cdn.discordapp.com/banners/721393505746026580/a_ea849581396aba586bb398a63602b3ee.gif?size=600">
+            </div>
+          </div>
+          <div class="row main">
+            <div class="col s12 center-align">
+              <h5>CianWasTaken_</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <blockquote style="margin: 0% 8% 0% 8%;">
+                I'm Cian, a far less active owner but still helps.
+              </blockquote>
+            </div>
+          </div>
+          <div class="row main">
+            <div class="col s12 center-align">
+              <br>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  <!-- / Staff -->
+
+  <!-- Vip -->
+  <div class="vip center-align" id="vip">
+    <div class="main">
+      <div class="row" data-aos="fade">
+        <div class="col s12">
+          <h4>Donators</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 l4" data-aos="fade-right">
+          <div class="card-panel">
+            <div class="row">
+              <div class="col s12">
+                <h5>Almighty</h5>
+                <span>$1.44 USD</span>
+                <br>
+                <br>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://kittenscraft.tebex.io/package/4709125">Purchase</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 l4" data-aos="fade">
+          <div class="card-panel">
+            <div class="row">
+              <div class="col s12">
+                <h5>Legend</h5>
+                <span>$3.00 USD</span>
+                <br><br>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://kittenscraft.tebex.io/package/4709290">Purchase</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 l4" data-aos="fade-left">
+          <div class="card-panel">
+            <div class="row">
+              <div class="col s12">
+                <h5>Godly</h5>
+                <span>$6.00 USD</span>
+                <br><br>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://kittenscraft.tebex.io/package/4709325">Purchase</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+      <div class="row">
+        <div class="col s12 l4" data-aos="fade-right"></div>
+        </div>
+        <div class="col s12 l4" data-aos="fade">
+          <div class="card-panel">
+            <div class="row">
+              <div class="col s12">
+                <h5>Mythical</h5>
+                <span>$11.99 USD</span>
+                <br><br>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://kittenscraft.tebex.io/package/4709329">Purchase</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- /Vip -->
+  <!-- About -->
+
+  <div class="vote" id="vote">
+    <div class="main">
+      <div class="row">
+        <div class="col s12 l5 align-center">
+          <img class="responsive-img" src="https://media3.giphy.com/media/VbnUQpnihPSIgIXuZv/giphy.gif" data-aos="fade-right">
+        </div>
+        <div class="col s12 l7" data-aos="fade-left">
+          <h4>Vote for Kitten's Craft!</h4>
+          <p>Thank you so much for considering to vote on Kitten's Craft. Rewards for Daily Voting coming soon!</p>
+          <a class="waves-effect waves-light btn-large grey darken-4" style="margin-top: 2%;" href="https://minecraftservers.org/server/628734">Vote Link 1</a>
+          <a class="waves-effect waves-light btn-large grey darken-4" style="margin-top: 2%;" href="https://minecraft-mp.com/server-s297108">Vote Link 2</a>
+          <a class="waves-effect waves-light btn-large grey darken-4" style="margin-top: 2%;" href="https://topminecraftservers.org/server/23570">Vote Link 3</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- / About -->
+  <!-- Footer -->
+  <br>
+  <br>
+  <footer class="page-footer grey darken-4 z-depth-4">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Kitten's Craft</h5>
+          <p class="grey-text text-lighten-4">The best Minecraft server network for everyone!</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Social Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="https://kittenscraft.com/discord">Discord</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://kittenscraft.com/store">Tebex Store</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright grey darken-4 z-depth-4">
+      <div class="container">
+        <!-- Please give credit, where credit is due. Leave this here... -->
+        Website developed by Rixels#1337
+        <a class="grey-text text-lighten-4 right" href="#!">2021 © Kitten's Dev</a>
+      </div>
+    </div>
+  </footer>
+  <!-- /Footer -->
+
+  <!-- AOS INIT -->
+  <script>
+    AOS.init({
+      duration: 800,
+      easing: 'ease-in-sine',
+      disable: 'mobile',
+    });
+  </script>
+
+  <!-- Mobile Nav INIT -->
+  <script>
+    $(".button-collapse").sideNav();
+  </script>
+
+  <script>
+  function copyip() {
+    navigator.clipboard.writeText("play.kittenscraft.com");
+    alert("The server ip has been copied to your clipboard!");
+  }
+  </script>
 </body>
 </html>
