--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="Kitten's Craft is the best multiplayer Minecraft network to play and endulge in with your friends. With our amazing performance and amazing gamemodes, you will have a lot of fun! We are powered by cats!">
   <meta property="og:description" content="Kitten's Craft is the best multiplayer Minecraft network to play and endulge in with your friends. With our amazing performance and amazing gamemodes, you will have a lot of fun! We are powered by cats!">
+  <meta property="og:image" content="cat.png" />
   <meta name="keywords" content="Kittens, kitten, Minecraft, Server, Survival, SMP">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -187,7 +188,7 @@
           <div class="row">
             <div class="col s12">
               <blockquote style="margin: 0% 8% 0% 8%;">
-                I'm Cian, a far less active owner but still helps.
+                I'm Cian, helpful and a very nice owner here to help.
               </blockquote>
             </div>
           </div>
